...
  final _controller = FcpViewController();
  final _random = Random();
  int _complimentCount = 0;
  bool _detailsVisible = false;

  final _compliments = [
    'You are as bright as a supernova!',
    'Your gravitational pull is irresistible.',
    'You shine like a newly formed star.',
    'You have the courage of a comet.',
    'Your heart is as big as a galaxy.',
  ];

...
    }));

    // Next, send a LayoutUpdate to modify the UI structure.
    final operation = _detailsVisible ? 'add' : 'remove';
    final childrenList = [
      'compliment_text_padding',
      if (_detailsVisible) 'details_text', // Conditionally include the widget
      'compliment_button_padding',
      'mood_selector',
      'details_row', // The Checkbox is now in a Row
      'facts_list',
    ];

...
          // Padding for compliment text
          {
            'id': 'compliment_text_padding',
            'type': 'Padding',
            'properties': {
              'all': 12.0,
              'child': 'compliment_text',
            },
          },
          // Padding for compliment button
          {
            'id': 'compliment_button_padding',
            'type': 'Padding',
            'properties': {
              'all': 12.0,
              'child': 'compliment_button',
            },
          },
          // Compliment Text
          {
            'id': 'compliment_text',
            'type': 'Text',
...
          },
          // Details Toggle
          {
            'id': 'details_row',
            'type': 'Row',
            'properties': {
              'children': ['details_toggle_text', 'details_toggle']
            }
          },
          {
            'id': 'details_toggle',
            'type': 'Checkbox',
            'properties': {'key': 'details_toggle'},
...
